--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "apirtc-react",
+  "name": "apirtc_react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apirtc/apirtc": "^4.7.8",
+    "@apirtc/apirtc": "^5.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://apirtc.github.io/apirtc-react"
+  }
 }
